--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   /* max-width: 1280px; */
   /* width: calc(100vw - 4em); */
   width: 100vw;
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  margin: 0;
   /* padding: 2rem; */
   text-align: center;
 }
