--- a/src/components/styles/ProjectComponent.css
+++ b/src/components/styles/ProjectComponent.css
@@ -6,13 +6,14 @@
 
 .details{
     float: right;
-    width: calc(100% - 20em);
-    padding: 0em 1em; /*top-bot left-right*/
-
+    width: 100%;
+    /* width: 90%; */
+    padding: 0em 1em; 
+    text-align: left;
 }
 
 .details p{
-    text-align: left;
+    width: 90%;
 }
 
 
@@ -24,27 +25,50 @@
 }
 
 .picture{
-    float: left;
-    height: 100%;
-    width: calc(20em - 0.5em);
-    display: flex;
+    /* float: left; */
+    /* max-height: 10%; */
+    width: 50vw;
+    /* display: flex; */
     padding-right: 0.5em;
 
 }
 
 .picture img{
-    /* height: auto; */
-    max-height: 100%;
+    height: 100%;
     width: 100%;
-
+    object-fit: cover;
 }
 
 .project_container{
     margin: 0.8em;
+    /* margin-right: em; */
     display: flex;  
     box-shadow: 0em 0em 0.5em 0em #333333; /* create box effect*/
     padding-right:0em;
+    /* width: calc(100vw - 0.8em); */
 
 }
 
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+
+    .details, .picture{
+        float: none;
+        width: calc(100vw - 6vw); /* temp fix for image not fitting*/
+        text-align: left;
+    }
+
+    .name{
+        font-size: 1.5em;
+    }
+
+    .project_container{
+        display: grid;
+        width: calc(100vw - 6vw);
+        /* margin: 0; */
+        margin-left: 3vw;
+    }
+
+    
+  }
 
